--- a/src/UI_Design/CartItemsStyles/styles.module.scss
+++ b/src/UI_Design/CartItemsStyles/styles.module.scss
@@ -42,7 +42,7 @@ tr {
         }
 
 
-        
+
 
         .next_prev_icons {
             .arrow {
@@ -56,17 +56,17 @@ tr {
 
         padding: 10px;
 
-            &:hover {
+        &:hover {
 
-                .plus_icon,
-                .minus_icon {
-                    transition: all .4s;
-                    transform: rotate(180deg);
-                }
-
+            .plus_icon,
+            .minus_icon {
+                transition: all .4s;
+                transform: rotate(180deg);
             }
+
         }
     }
+
 
     .delete {
 
@@ -90,11 +90,11 @@ tr {
             }
         }
 
-            .delete_btn,
-            .btn_icon,
-            .btn_text {
-                transition: all 0.3s;
-            }
+        .delete_btn,
+        .btn_icon,
+        .btn_text {
+            transition: all 0.3s;
+        }
 
         .delete_btn .btn_text {
             transform: translateX(20px);
@@ -116,9 +116,9 @@ tr {
 
 
 
-            .delete_btn:hover .btn_text {
-                color: transparent;
-            }
+        .delete_btn:hover .btn_text {
+            color: transparent;
+        }
 
         .delete_btn:hover .btn_icon {
             width: 100px;
@@ -130,179 +130,179 @@ tr {
         }
     }
 
-        .plus_minus_btn {
-            display: flex;
-            border: 1px solid indigo;
-            border-radius: 4px;
-            justify-content: space-between;
-            width: 100px;
-            height: 30px;
+    .plus_minus_btn {
+        display: flex;
+        border: 1px solid indigo;
+        border-radius: 4px;
+        justify-content: space-between;
+        width: 100px;
+        height: 30px;
 
-            @media (max-width: '1170px') {
-                margin-left: auto;
+        @media (max-width: '1170px') {
+            margin-left: auto;
 
 
-            }
-
-            span {
-                font-size: 20px;
-            }
-
-            button {
-            border-radius: 4px;
-           background: transparent;
-                outline: none;
-                width: 30px;
-                border: none;
-                height: 100%;
-                border-right: 1px solid indigo;
-                color: indigo;
-                border: none;
-
-                &:hover {
-
-                    .plus_icon,
-                    .minus_icon {
-                        transition: all .4s;
-                        transform: rotate(180deg);
-                    }
-
-                }
-            }
         }
 
-        .count{
+        span {
             font-size: 20px;
         }
 
-        // ~~~~~~~Admin Page uchun ~~~~~~~~~~//
-        .threeDote {
-            text-align: center;
-            position: relative;
+        button {
+            border-radius: 4px;
+            background: transparent;
+            outline: none;
+            width: 30px;
+            border: none;
+            height: 100%;
+            border-right: 1px solid indigo;
+            color: indigo;
+            border: none;
 
-            .threeIcon {
+            &:hover {
+
+                .plus_icon,
+                .minus_icon {
+                    transition: all .4s;
+                    transform: rotate(180deg);
+                }
+
+            }
+        }
+    }
+
+    .count {
+        font-size: 20px;
+    }
+
+    // ~~~~~~~Admin Page uchun ~~~~~~~~~~//
+    .threeDote {
+        text-align: center;
+        position: relative;
+
+        .threeIcon {
+            &:hover {
+                transition: all .4s ease;
+                transform: scale(1.1);
+            }
+        }
+
+        @media (max-width: '990px') {
+            text-align: right;
+        }
+
+        .delete {
+
+            text-align: right;
+            width: 150px;
+            position: absolute;
+            left: -70%;
+            z-index: 10;
+            padding: 10px;
+            padding-top: 0;
+            padding-right: 3px;
+            margin-left: auto;
+            border-radius: 5px;
+            background: #fff;
+            box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+            -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+            -moz-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+
+            .close_btn {
+                color: #777;
+
                 &:hover {
-                    transition: all .4s ease;
-                    transform: scale(1.1);
+                    transform: scale(1.4);
+                    transition: all .3s;
                 }
             }
 
-            @media (max-width: '990px') {
-                text-align: right;
+            @media (max-width: '950px') {
+                left: 80%;
             }
 
-            .delete {
+            @media (max-width: '800px') {
+                left: 70%;
+            }
 
-                text-align: right;
-                width: 150px;
+            @media (max-width: '600px') {
+                left: 60%;
+            }
+
+            @media (max-width: '450px') {
+                left: 40%;
+            }
+
+            @media (max-width: '320px') {
+                left: 20%;
+            }
+
+            .delete_btn {
+                position: relative;
+                width: 100px;
+                height: 25px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                border: none;
+                background-color: #fff;
+                border-radius: 2px;
+                overflow: hidden;
+                margin-bottom: 7px;
+
+                @media (max-width: '1170px') {}
+
+                &:hover {
+                    transition: all .2s;
+                    box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                    -webkit-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                    -moz-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                }
+            }
+
+            .delete_btn,
+            .btn_icon,
+            .btn_text {
+                transition: all 0.3s;
+            }
+
+            .delete_btn .btn_text {
+                transform: translateX(40px);
+                color: indigo;
+                font-weight: 600;
+
+            }
+
+            .delete_btn .btn_icon {
                 position: absolute;
-                left: -70%;
-                z-index: 10;
-                padding: 10px;
-                padding-top: 0;
-                padding-right: 3px;
-                margin-left: auto;
-                border-radius: 5px;
-                background: #fff;
-                box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-                -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-                -moz-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-
-                .close_btn {
-                    color: #777;
-
-                    &:hover {
-                        transform: scale(1.4);
-                        transition: all .3s;
-                    }
-                }
-
-                @media (max-width: '950px') {
-                    left: 80%;
-                }
-
-                @media (max-width: '800px') {
-                    left: 70%;
-                }
-
-                @media (max-width: '600px') {
-                    left: 60%;
-                }
-
-                @media (max-width: '450px') {
-                    left: 40%;
-                }
-
-                @media (max-width: '320px') {
-                    left: 20%;
-                }
-
-                .delete_btn {
-                    position: relative;
-                    width: 100px;
-                    height: 25px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                    border: none;
-                    background-color: #fff;
-                    border-radius: 2px;
-                    overflow: hidden;
-                    margin-bottom: 7px;
-
-                    @media (max-width: '1170px') {}
-
-                    &:hover {
-                        transition: all .2s;
-                        box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                        -webkit-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                        -moz-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                    }
-                }
-
-                .delete_btn,
-                .btn_icon,
-                .btn_text {
-                    transition: all 0.3s;
-                }
-
-                .delete_btn .btn_text {
-                    transform: translateX(40px);
-                    color: indigo;
-                    font-weight: 600;
-
-                }
-
-                .delete_btn .btn_icon {
-                    position: absolute;
-                    transform: translateX(0);
-                    height: 100%;
-                    width: 25px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    color: indigo;
-                }
-
-
-
-                .delete_btn:hover .btn_text {
-                    color: transparent;
-                }
-
-                .delete_btn:hover .btn_icon {
-                    width: 90px;
-                    transform: translateX(40px);
-                }
-
-                .delete_btn:active {
-                    transform: translate(3px, 3px);
-                }
+                transform: translateX(0);
+                height: 100%;
+                width: 25px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: indigo;
             }
 
+
+
+            .delete_btn:hover .btn_text {
+                color: transparent;
+            }
+
+            .delete_btn:hover .btn_icon {
+                width: 90px;
+                transform: translateX(40px);
+            }
+
+            .delete_btn:active {
+                transform: translate(3px, 3px);
+            }
         }
 
     }
+
+
 
 
 
@@ -397,144 +397,146 @@ tr {
     padding: 10px;
     display: grid;
     grid-template-columns: 50% 50%;
-.smallImg {
-                    width: 100px;
-                    height: 80px;
 
-                    @media (max-width: '450px') {
-                        width: 50px;
-                        height: 40px;
+    .smallImg {
+        width: 100px;
+        height: 80px;
+
+        @media (max-width: '450px') {
+            width: 50px;
+            height: 40px;
 
 
+        }
+    }
+
+    .bigImg {
+        width: 100%;
+        height: 200px;
+
+        @media (max-width: '450px') {
+            width: 100%;
+            height: 150px;
+
+
+            @media (max-width: '900px') {
+                grid-template-columns: auto;
+                overflow-y: scroll;
+                height: 300px;
+
+                &::-webkit-scrollbar {
+                    width: 4px;
+                    height: 1px;
+                }
+
+
+            }
+
+
+
+            .about_product {
+                padding-top: 10px;
+                padding-left: 15px;
+
+                h4 {
+                    text-align: right;
+                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    color: indigo;
+                }
+
+                h2 {
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: 20px;
+
+                }
+
+                p {
+                    margin: 8px 0;
+                    color: #777;
+                }
+
+                h3 {
+                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                }
+
+                .desc {
+                    margin-top: 20px;
+
+                    h4 {
+                        text-align: start;
+                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                     }
                 }
 
-                .bigImg {
-                    width: 100%;
-                    height: 200px;
+                .descriptions {
+                    margin-top: 15px;
+                    // padding: 0 5px;
+                    display: flex;
+                    justify-content: space-between;
 
-                    @media (max-width: '450px') {
-                        width: 100%;
-                        height: 150px;
+                    @media (max-width: '1050px') {
+                        flex-direction: column;
+
+                    }
+
+                    .active_tab {
+                        background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+                        color: #fff;
+
+                    }
+
+                    .tab_btn {
+                        padding-bottom: 15px;
+
+                        @media (max-width: '1060px') {
+
+                            margin-top: 20px;
 
 
-    @media (max-width: '900px') {
-        grid-template-columns: auto;
-        overflow-y: scroll;
-        height: 300px;
+                        }
+                    }
 
-        &::-webkit-scrollbar {
-            width: 4px;
-            height: 1px;
-        }
-
-
-    }
+                    .tab_btn button {
+                        border-radius: 4px;
+                        border: 1px solid indigo;
+                        padding: 5px;
+                        margin-right: 15px;
+                        font-size: 20px;
 
 
 
-    .about_product {
-        padding-top: 10px;
-        padding-left: 15px;
+                        &:hover {
+                            transform: scale(1.1);
+                            transition: all .3s;
 
-        h4 {
-            text-align: right;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: indigo;
-        }
 
-        h2 {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 20px;
+                        }
+                    }
 
-        }
+                    .description_rewiews {
+                        padding-right: 10px;
 
-        p {
-            margin: 8px 0;
-            color: #777;
-        }
+                        p {
+                            font-family: 'Roboto';
+                            text-align: justify;
+                            color: #000;
+                            line-height: 25px;
+                        }
 
-        h3 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+                        @media (max-width: '1060px') {
+                            margin-bottom: 20px;
+                            padding-right: 0;
 
-        .desc {
-            margin-top: 20px;
-
-            h4 {
-                text-align: start;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            }
-        }
-
-        .descriptions {
-            margin-top: 15px;
-            // padding: 0 5px;
-            display: flex;
-            justify-content: space-between;
-
-            @media (max-width: '1050px') {
-                flex-direction: column;
-
-            }
-
-            .active_tab {
-                background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
-                color: #fff;
-
-            }
-
-            .tab_btn {
-                padding-bottom: 15px;
-
-                @media (max-width: '1060px') {
-
-                    margin-top: 20px;
+                        }
+                    }
 
 
                 }
             }
 
-            .tab_btn button {
-                border-radius: 4px;
-                border: 1px solid indigo;
-                padding: 5px;
-                margin-right: 15px;
-                font-size: 20px;
+            img {
+                mix-blend-mode: multiply;
 
-
-
-                &:hover {
-                    transform: scale(1.1);
-                    transition: all .3s;
-
-
-                }
             }
-
-            .description_rewiews {
-                padding-right: 10px;
-
-                p {
-                    font-family: 'Roboto';
-                    text-align: justify;
-                    color: #000;
-                    line-height: 25px;
-                }
-
-                @media (max-width: '1060px') {
-                    margin-bottom: 20px;
-                    padding-right: 0;
-
-                }
-            }
-
-
         }
-    }
-
-    img {
-        mix-blend-mode: multiply;
-
-    }
-}
+    }}
