--- a/src/UI_Design/CartItemsStyles/styles.module.scss
+++ b/src/UI_Design/CartItemsStyles/styles.module.scss
@@ -7,9 +7,16 @@ tr {
     border: 1px dotted #494747;
 
     td {
-
-        &:nth-child(2) {
-            padding: 20px;
+        text-align: left;
+      padding: 25px 50px;
+      .img_admin{
+        width: 200px;
+      }
+        &:nth-child(1) {
+            padding: 10px;
+            text-align: center;
+            // width: 200px;
+            // margin-right: auto;
 
             img {
                 width: 70%;
@@ -42,7 +49,7 @@ tr {
         }
 
 
-
+        
 
         .next_prev_icons {
             .arrow {
@@ -56,207 +63,24 @@ tr {
 
         padding: 10px;
 
-        &:hover {
-
-            .plus_icon,
-            .minus_icon {
-                transition: all .4s;
-                transform: rotate(180deg);
-            }
-
-        }
-    }
-
-
-    .delete {
-
-        .delete_btn {
-
-            position: relative;
-            width: 100px;
-            height: 30px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            border: 1px solid indigo;
-            background-color: #fff;
-            border-radius: 4px;
-            overflow: hidden;
-
-            @media (max-width: '1170px') {
-                margin-left: auto;
-
-
-            }
-        }
-
-        .delete_btn,
-        .btn_icon,
-        .btn_text {
-            transition: all 0.3s;
-        }
-
-        .delete_btn .btn_text {
-            transform: translateX(20px);
-            color: indigo;
-            font-weight: 600;
-        }
-
-        .delete_btn .btn_icon {
-            position: absolute;
-            transform: translateX(70px);
-            height: 100%;
-            width: 39px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-left: 1px solid indigo;
-            color: red;
-        }
-
-
-
-        .delete_btn:hover .btn_text {
-            color: transparent;
-        }
-
-        .delete_btn:hover .btn_icon {
-            width: 100px;
-            transform: translateX(0);
-        }
-
-        .delete_btn:active {
-            transform: translate(3px, 3px);
-        }
-    }
-
-    .plus_minus_btn {
-        display: flex;
-        border: 1px solid indigo;
-        border-radius: 4px;
-        justify-content: space-between;
-        width: 100px;
-        height: 30px;
-
-        @media (max-width: '1170px') {
-            margin-left: auto;
-
-
-        }
-
-        span {
-            font-size: 20px;
-        }
-
-        button {
-            border-radius: 4px;
-            background: transparent;
-            outline: none;
-            width: 30px;
-            border: none;
-            height: 100%;
-            border-right: 1px solid indigo;
-            color: indigo;
-            border: none;
-
-            &:hover {
-
-                .plus_icon,
-                .minus_icon {
-                    transition: all .4s;
-                    transform: rotate(180deg);
-                }
-
-            }
-        }
-    }
-
-    .count {
-        font-size: 20px;
-    }
-
-    // ~~~~~~~Admin Page uchun ~~~~~~~~~~//
-    .threeDote {
-        text-align: center;
-        position: relative;
-
-        .threeIcon {
-            &:hover {
-                transition: all .4s ease;
-                transform: scale(1.1);
-            }
-        }
-
-        @media (max-width: '990px') {
-            text-align: right;
-        }
-
-        .delete {
-
-            text-align: right;
-            width: 150px;
-            position: absolute;
-            left: -70%;
-            z-index: 10;
-            padding: 10px;
-            padding-top: 0;
-            padding-right: 3px;
-            margin-left: auto;
-            border-radius: 5px;
-            background: #fff;
-            box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-            -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-            -moz-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-
-            .close_btn {
-                color: #777;
-
-                &:hover {
-                    transform: scale(1.4);
-                    transition: all .3s;
-                }
-            }
-
-            @media (max-width: '950px') {
-                left: 80%;
-            }
-
-            @media (max-width: '800px') {
-                left: 70%;
-            }
-
-            @media (max-width: '600px') {
-                left: 60%;
-            }
-
-            @media (max-width: '450px') {
-                left: 40%;
-            }
-
-            @media (max-width: '320px') {
-                left: 20%;
-            }
+        .delete_product {
 
             .delete_btn {
                 position: relative;
                 width: 100px;
-                height: 25px;
+                height: 30px;
                 cursor: pointer;
                 display: flex;
                 align-items: center;
-                border: none;
+                border: 1px solid indigo;
                 background-color: #fff;
-                border-radius: 2px;
+                border-radius: 4px;
                 overflow: hidden;
-                margin-bottom: 7px;
 
-                @media (max-width: '1170px') {}
+                @media (max-width: '1170px') {
+                    margin-left: auto;
 
-                &:hover {
-                    transition: all .2s;
-                    box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                    -webkit-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                    -moz-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+
                 }
             }
 
@@ -267,20 +91,20 @@ tr {
             }
 
             .delete_btn .btn_text {
-                transform: translateX(40px);
+                transform: translateX(20px);
                 color: indigo;
                 font-weight: 600;
-
             }
 
             .delete_btn .btn_icon {
                 position: absolute;
-                transform: translateX(0);
+                transform: translateX(70px);
                 height: 100%;
-                width: 25px;
+                width: 39px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                border-left: 1px solid indigo;
                 color: indigo;
             }
 
@@ -291,8 +115,8 @@ tr {
             }
 
             .delete_btn:hover .btn_icon {
-                width: 90px;
-                transform: translateX(40px);
+                width: 100px;
+                transform: translateX(0);
             }
 
             .delete_btn:active {
@@ -300,9 +124,179 @@ tr {
             }
         }
 
+        .plus_minus_btn {
+            display: flex;
+            border: 1px solid indigo;
+            border-radius: 4px;
+            justify-content: space-between;
+            width: 100px;
+            height: 30px;
+
+            @media (max-width: '1170px') {
+                margin-left: auto;
+
+
+            }
+
+            span {
+                font-size: 20px;
+            }
+
+            button {
+            border-radius: 4px;
+           background: transparent;
+                outline: none;
+                width: 30px;
+                border: none;
+                height: 100%;
+                border-right: 1px solid indigo;
+                color: indigo;
+                border: none;
+
+                &:hover {
+
+                    .plus_icon,
+                    .minus_icon {
+                        transition: all .4s;
+                        transform: rotate(180deg);
+                    }
+
+                }
+            }
+        }
+
+        .count{
+            font-size: 20px;
+        }
+
+// ~~~~~~~Admin Page uchun ~~~~~~~~~~//
+        .threeDote {
+            text-align: center;
+            position: relative;
+
+            .threeIcon {
+                &:hover {
+                    transition: all .4s ease;
+                    transform: scale(1.1);
+                }
+            }
+
+            @media (max-width: '990px') {
+                text-align: right;
+            }
+
+            .delete {
+
+                text-align: right;
+                width: 150px;
+                position: absolute;
+                left: -70%;
+                z-index: 10;
+                padding: 10px;
+                padding-top: 0;
+                padding-right: 3px;
+                margin-left: auto;
+                border-radius: 5px;
+                background: #fff;
+                box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+                -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+                -moz-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+
+                .close_btn {
+                    color: #777;
+
+                    &:hover {
+                        transform: scale(1.4);
+                        transition: all .3s;
+                    }
+                }
+
+                @media (max-width: '950px') {
+                    left: 80%;
+                }
+
+                @media (max-width: '800px') {
+                    left: 70%;
+                }
+
+                @media (max-width: '600px') {
+                    left: 60%;
+                }
+
+                @media (max-width: '450px') {
+                    left: 40%;
+                }
+
+                @media (max-width: '320px') {
+                    left: 20%;
+                }
+
+                .delete_btn {
+                    position: relative;
+                    width: 100px;
+                    height: 25px;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    border: none;
+                    background-color: #fff;
+                    border-radius: 2px;
+                    overflow: hidden;
+                    margin-bottom: 7px;
+
+                    @media (max-width: '1170px') {}
+
+                    &:hover {
+                        transition: all .2s;
+                        box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                        -webkit-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                        -moz-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                    }
+                }
+
+                .delete_btn,
+                .btn_icon,
+                .btn_text {
+                    transition: all 0.3s;
+                }
+
+                .delete_btn .btn_text {
+                    transform: translateX(40px);
+                    color: indigo;
+                    font-weight: 600;
+
+                }
+
+                .delete_btn .btn_icon {
+                    position: absolute;
+                    transform: translateX(0);
+                    height: 100%;
+                    width: 25px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: indigo;
+                }
+
+
+
+                .delete_btn:hover .btn_text {
+                    color: transparent;
+                }
+
+                .delete_btn:hover .btn_icon {
+                    width: 90px;
+                    transform: translateX(40px);
+                }
+
+                .delete_btn:active {
+                    transform: translate(3px, 3px);
+                }
+            }
+
+        }
+
     }
-
-
 
 
 
@@ -329,7 +323,7 @@ tr {
         align-items: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-        p {
+p {
             font-weight: 700;
             font-size: 15px;
             display: flex;
@@ -419,124 +413,134 @@ tr {
             height: 150px;
 
 
-            @media (max-width: '900px') {
-                grid-template-columns: auto;
-                overflow-y: scroll;
-                height: 300px;
+        }
+    }
 
-                &::-webkit-scrollbar {
-                    width: 4px;
-                    height: 1px;
-                }
+    @media (max-width: '900px') {
+        grid-template-columns: auto;
+        overflow-y: scroll;
+        height: 300px;
 
-
-            }
-
-
-
-            .about_product {
-                padding-top: 10px;
-                padding-left: 15px;
-
-                h4 {
-                    text-align: right;
-                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                    color: indigo;
-                }
-
-                h2 {
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-size: 20px;
-
-                }
-
-                p {
-                    margin: 8px 0;
-                    color: #777;
-                }
-
-                h3 {
-                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                }
-
-                .desc {
-                    margin-top: 20px;
-
-                    h4 {
-                        text-align: start;
-                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                    }
-                }
-
-                .descriptions {
-                    margin-top: 15px;
-                    // padding: 0 5px;
-                    display: flex;
-                    justify-content: space-between;
-
-                    @media (max-width: '1050px') {
-                        flex-direction: column;
-
-                    }
-
-                    .active_tab {
-                        background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
-                        color: #fff;
-
-                    }
-
-                    .tab_btn {
-                        padding-bottom: 15px;
-
-                        @media (max-width: '1060px') {
-
-                            margin-top: 20px;
+        &::-webkit-scrollbar {
+            width: 4px;
+            height: 1px;
+        }
 
 
-                        }
-                    }
-
-                    .tab_btn button {
-                        border-radius: 4px;
-                        border: 1px solid indigo;
-                        padding: 5px;
-                        margin-right: 15px;
-                        font-size: 20px;
+    }
 
 
 
-                        &:hover {
-                            transform: scale(1.1);
-                            transition: all .3s;
+    .about_product {
+        padding-top: 10px;
+        padding-left: 15px;
 
+        h4 {
+            text-align: right;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: indigo;
+        }
 
-                        }
-                    }
+        h2 {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
 
-                    .description_rewiews {
-                        padding-right: 10px;
+        }
 
-                        p {
-                            font-family: 'Roboto';
-                            text-align: justify;
-                            color: #000;
-                            line-height: 25px;
-                        }
+        p {
+            margin: 8px 0;
+            color: #777;
+        }
 
-                        @media (max-width: '1060px') {
-                            margin-bottom: 20px;
-                            padding-right: 0;
+        h3 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
-                        }
-                    }
+        .desc {
+            margin-top: 20px;
 
-
-                }
-            }
-
-            img {
-                mix-blend-mode: multiply;
-
+            h4 {
+                text-align: start;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             }
         }
-    }}
+
+        .descriptions {
+            margin-top: 15px;
+            // padding: 0 5px;
+            display: flex;
+            justify-content: space-between;
+
+            @media (max-width: '1050px') {
+                flex-direction: column;
+
+            }
+
+            .active_tab {
+                background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+                color: #fff;
+
+            }
+
+            .tab_btn {
+                padding-bottom: 15px;
+
+                @media (max-width: '1060px') {
+
+                    margin-top: 20px;
+
+
+                }
+            }
+
+            .tab_btn button {
+                border-radius: 4px;
+                border: 1px solid indigo;
+                padding: 5px;
+                margin-right: 15px;
+                font-size: 20px;
+
+
+
+                &:hover {
+                    transform: scale(1.1);
+                    transition: all .3s;
+
+
+                }
+            }
+
+            .description_rewiews {
+                padding-right: 10px;
+
+                p {
+                    font-family: 'Roboto';
+                    text-align: justify;
+                    color: #000;
+                    line-height: 25px;
+                }
+
+                @media (max-width: '1060px') {
+                    margin-bottom: 20px;
+                    padding-right: 0;
+
+                }
+            }
+
+
+        }
+    }
+
+    img {
+        mix-blend-mode: multiply;
+
+    }
+}
+
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
