--- a/src/Admin/Components/NavbarAdmin/styles.module.scss
+++ b/src/Admin/Components/NavbarAdmin/styles.module.scss
@@ -29,9 +29,10 @@
              align-items: center;
 
              a {
+                                 
                  margin: auto;
 
-                 .icon_shop {
+                 .notifacation_icon {
                      color: indigo;
 
                      &:hover {
@@ -47,7 +48,7 @@
                      justify-content: center;
                      right: 0;
                      top: -10px;
-                     left: 18px;
+                     left: 11px;
                      border-radius: 50%;
                      border: 3 solid indigo;
                      font-weight: bolder;
@@ -220,6 +221,9 @@
        .search_admin{
         position: relative;
         width: 50%;
+        @media (max-width: '800px') {
+           width: 90%;
+        }
         input{
             font-size: 16px;
         outline: none;
